[gd_scene load_steps=2 format=3 uid="uid://b6q8y7n1xvvmc"]

[ext_resource type="Script" path="res://scripts/demo/RealtimeSpriteDemo.gd" id="1_3h8qf"]

[node name="RealtimeSpriteDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_3h8qf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = -20.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Real-Time Sprite Generation Demo"
theme_override_font_sizes/font_size = 16

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CharacterLabel" type="Label" parent="VBoxContainer/CharacterContainer"]
layout_mode = 2
text = "Character:"
custom_minimum_size = Vector2(80, 0)

[node name="CharacterOption" type="OptionButton" parent="VBoxContainer/CharacterContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PaletteContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PaletteLabel" type="Label" parent="VBoxContainer/PaletteContainer"]
layout_mode = 2
text = "Palette:"
custom_minimum_size = Vector2(80, 0)

[node name="PaletteOption" type="OptionButton" parent="VBoxContainer/PaletteContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StateContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="VBoxContainer/StateContainer"]
layout_mode = 2
text = "Animation:"
custom_minimum_size = Vector2(80, 0)

[node name="StateOption" type="OptionButton" parent="VBoxContainer/StateContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QualityContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="QualityLabel" type="Label" parent="VBoxContainer/QualityContainer"]
layout_mode = 2
text = "Enhanced:"
custom_minimum_size = Vector2(80, 0)

[node name="QualityCheck" type="CheckBox" parent="VBoxContainer/QualityContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CustomizationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Character Customization"
theme_override_font_sizes/font_size = 14

[node name="CustomizationContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LimbContainer" type="HBoxContainer" parent="VBoxContainer/CustomizationContainer"]
layout_mode = 2

[node name="LimbLabel" type="Label" parent="VBoxContainer/CustomizationContainer/LimbContainer"]
layout_mode = 2
text = "Limb Length:"
custom_minimum_size = Vector2(80, 0)

[node name="LimbSlider" type="HSlider" parent="VBoxContainer/CustomizationContainer/LimbContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="HeadContainer" type="HBoxContainer" parent="VBoxContainer/CustomizationContainer"]
layout_mode = 2

[node name="HeadLabel" type="Label" parent="VBoxContainer/CustomizationContainer/HeadContainer"]
layout_mode = 2
text = "Head Size:"
custom_minimum_size = Vector2(80, 0)

[node name="HeadSlider" type="HSlider" parent="VBoxContainer/CustomizationContainer/HeadContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="BodyContainer" type="HBoxContainer" parent="VBoxContainer/CustomizationContainer"]
layout_mode = 2

[node name="BodyLabel" type="Label" parent="VBoxContainer/CustomizationContainer/BodyContainer"]
layout_mode = 2
text = "Body Width:"
custom_minimum_size = Vector2(80, 0)

[node name="BodySlider" type="HSlider" parent="VBoxContainer/CustomizationContainer/BodyContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.5
max_value = 2.0
step = 0.1
value = 1.0

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PerformanceContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PerformanceTitle" type="Label" parent="VBoxContainer/PerformanceContainer"]
layout_mode = 2
text = "Performance Monitor"
theme_override_font_sizes/font_size = 14

[node name="PerformanceLabel" type="Label" parent="VBoxContainer/PerformanceContainer"]
layout_mode = 2
text = "Loading performance data..."
theme_override_font_sizes/font_size = 10

[node name="HSeparator4" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Controls:
1 - Random palette
2 - Random animation
3 - Random proportions
C - Clear cache
P - Print stats"
theme_override_font_sizes/font_size = 10